Fixed some conditions